adding student info page

--- a/index.html
+++ b/index.html
@@ -18,11 +18,23 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap" rel="stylesheet">
 
-  <!-- Unicons CSS -->
-  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
 </head>
 
 <body>
+
+  <a href="student.html" target="_blank" class="btn-next--page">
+    <span class="btn-next--page-icon"><svg width="16" height="16" viewBox="2 2 16 16" fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd"
+          d="M13.646 13.354a.5.5 0 010-.708L16.293 10l-2.647-2.646a.5.5 0 01.708-.708l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708 0z"
+          clip-rule="evenodd" />
+        <path fill-rule="evenodd" d="M6.5 10a.5.5 0 01.5-.5h9a.5.5 0 010 1H7a.5.5 0 01-.5-.5z" clip-rule="evenodd" />
+        <path fill-rule="evenodd"
+          d="M4 15.5A1.5 1.5 0 012.5 14V6A1.5 1.5 0 014 4.5h7A1.5 1.5 0 0112.5 6v1.5a.5.5 0 01-1 0V6a.5.5 0 00-.5-.5H4a.5.5 0 00-.5.5v8a.5.5 0 00.5.5h7a.5.5 0 00.5-.5v-1.5a.5.5 0 011 0V14a1.5 1.5 0 01-1.5 1.5H4z"
+          clip-rule="evenodd" />
+      </svg></span>
+    <span class="btn-next--page-text">Go To Add</span>
+  </a>
 
   <!-- Header (name and logo) -->
   <section class="headerSection">
@@ -78,7 +90,7 @@
 
     <!-- display data from input -->
     <div class="left-container">
-     <form action="#" class="data-render form-render">
+     <form action="#" class="data-render">
 
       <!-- Render student id -->
       <div class="form-control">
@@ -133,6 +145,8 @@
     </div>
 
   </section>
+
+
 
 
 
