fixing styles and adding component to add student page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -90,6 +90,9 @@
 
     <!-- display data from input -->
     <div class="left-container">
+      <div>
+        <h3 class="info-header">Student Borrow</h3>
+        </div>
      <form action="#" class="data-render">
 
       <!-- Render student id -->
@@ -121,7 +124,7 @@
     <!-- Student info input form -->
     <div class="right-container">
      <div>
-      <h3 class="info-header">Student Info</h3>
+      <h3 class="info-header">Add Student</h3>
      </div>
       <form class="input-form-two">
 
