--- a/student.html
+++ b/student.html
@@ -45,6 +45,35 @@
     </div>
   </section>
 
+  <!-- Table info section -->
+  <section class="table-info">
+    <div class="form-table">
+
+      <!-- student name -->
+      <label for="name">Student Name</label>
+    </div>
+
+    <!-- Student ID -->
+    <div class="form-table">
+      <label for="id">Student ID</label>
+    </div>
+
+    <!-- Book id -->
+    <div class="form-table">
+      <label for="bookID">Book ID</label>
+    </div>
+
+    <!-- Date of borrow -->
+    <div class="form-table">
+      <label for="date">Date of Borrow</label>
+    </div>
+
+    <!-- Date of return -->
+    <div class="form-table">
+      <label for="date">Date of Return</label>
+    </div>
+  </section>
+
   
   <!-- js link -->
   <script src="script.js"></script>
